--- a/src/TimeyWimey/wwwroot/index.html
+++ b/src/TimeyWimey/wwwroot/index.html
@@ -24,6 +24,11 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script>
+        window.scrollElement = (element, x, y) => {
+            element.scroll(x, y);
+        };
+    </script>
 </body>
 
 </html>
