Gotten some kind of draggability to work. It's not pretty, but need a checkpoint here.

--- a/src/TimeyWimey/wwwroot/index.html
+++ b/src/TimeyWimey/wwwroot/index.html
@@ -28,6 +28,11 @@
         window.scrollElement = (element, x, y) => {
             element.scroll(x, y);
         };
+        window.domGetBoundingClientRect = (element) => {
+            console.log(element);
+            //console.log(typeof element);
+            return element.getBoundingClientRect();
+        };
     </script>
 </body>
 
