--- a/src/TimeyWimey/wwwroot/index.html
+++ b/src/TimeyWimey/wwwroot/index.html
@@ -37,6 +37,25 @@
         };
     </script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+<script>
+    async function downloadFileFromStream(fileName, contentStreamReference) {
+        const arrayBuffer = await contentStreamReference.arrayBuffer();
+        const blob = new Blob([arrayBuffer]);
+        const url = URL.createObjectURL(blob);
+
+        triggerFileDownload(fileName, url);
+
+        URL.revokeObjectURL(url);
+    }
+
+    function triggerFileDownload(fileName, url) {
+        const anchorElement = document.createElement('a');
+        anchorElement.href = url;
+        anchorElement.download = fileName ?? '';
+        anchorElement.click();
+        anchorElement.remove();
+    }
+</script>
 </body>
 
 </html>
