Try to make the popup menu not appear offscreen. It's a little hacky with some constants for the estimated size of the menu.

--- a/src/TimeyWimey/wwwroot/index.html
+++ b/src/TimeyWimey/wwwroot/index.html
@@ -55,6 +55,13 @@
             anchorElement.click();
             anchorElement.remove();
         }
+
+        function getWindowRect() {
+            const width = window.visualViewport.width;
+            const height = window.visualViewport.height;
+
+            return new DOMRect(0, 0, width, height);
+         }
     </script>
 <!-- Start Single Page Apps for GitHub Pages -->
 <script type="text/javascript">
